# notecalc3

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  compile_and_run.bat  compile_release.bat  index.html  local.html  notecalc.html  rust-toolchain  test.bat
.github/workflows/: rust.yml
assets/: frontend_web.js  frontend_web_bg.wasm  fuzz.js  notecalc.css  showcase.js  webfont_v1.6.26.js
benchmarks/: Cargo.toml
benchmarks/arena/: run_benchmarks.rs  run_benchmarks.sh
benchmarks/src/: copy_paste.rs  cursor_navigation.rs  linerefs.rs  main.rs  matrix.rs  select_all.rs  typing.rs  variables.rs
docs/: 404.html  autocompletion.html  binary.html  changelog.html  chapter_1.html  conditional.html  export.html  functions.html  guide.html  headings_comments.html  index.html  line_refs.html  matrices.html  number_formats.html  percentages  percentages.html  print.html  searchindex.js  searchindex.json  selection_actions.html  units.html  variables.html
docs/3.0/: index.html
docs/assets/: frontend_web.js  frontend_web_bg.wasm  notecalc.css  notecalc.js  notecalc_instance.js
examples/: binary_interp.notecalc  financial.notecalc  leangains.notecalc  meal_calc.notecalc  tutorial.notecalc
frontend-web/: Cargo.toml  index.html  package.json
frontend-web/pkg/: frontend_web.js  frontend_web_bg.wasm
frontend-web/src/: lib.rs
notecalc-lib/: Cargo.toml
notecalc-lib/src/: borrow_checker_fighter.rs  calc.rs  consts.rs  editor.rs  functions.rs  lib.rs  main.rs  matrix.rs  renderer.rs  shunting_yard.rs  test_common.rs  token_parser.rs
notecalc-lib/src/editor/: editor.rs  editor_content.rs  mod.rs  test.rs
notecalc-lib/src/units/: consts.rs  mod.rs  units.rs
notecalc-lib/tests/: autocompletion.rs  bitset.rs  common.rs  fuzz.rs  highlighting_referenced_lines.rs  line_ref_normalization.rs  main.rs  matrix.rs  matrix_editing.rs  rich_copy.rs  user_def_function.rs
src/: calc.rs  editor_backend.rs  main.rs  shunting_yard.rs  token_parser.rs
src/units/: consts.rs  mod.rs  units.rs
