[package]
name = "notecalc-lib"
version = "0.1.0"
authors = ["bbodi <bodidev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.1.0"
smallvec = "1.2.0"
byteorder = "1.3.4"
strum = "0.18.0"
strum_macros = "0.18.0"
typed-arena = "2.0.1"

