[package]
name = "notecalc-lib"
version = "0.1.0"
authors = ["bbodi <bodidev@gmail.com>"]
edition = "2018"

[dependencies]
bigdecimal = "0.2.0"
smallvec = "1.2.0"
byteorder = "1.3.4"
strum = "0.18.0"
strum_macros = "0.18.0"
bumpalo = "3.4.0"
#rust_decimal = {path = "../../rust-decimal"}
rust_decimal = {git = "https://github.com/bbodi/rust-decimal.git"}

[dev-dependencies]
rand = "0.7.3"