[package]
name = "notecalc-lib"
version = "0.1.0"
authors = ["bbodi <bodidev@gmail.com>"]
edition = "2018"

[features]
tracy = ["tracy-client"]

[dependencies]
bigdecimal = "0.2.0"
byteorder = "1.3.4"
strum = "0.18.0"
strum_macros = "0.18.0"
bumpalo = "3.4.0"
#rust_decimal = {path = "../../rust-decimal"}
rust_decimal = {git = "https://github.com/bbodi/rust-decimal.git"}
tinyvec = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracy-client = { version = "0.10.0", features = ["enable"], optional = true  }

[dev-dependencies]
rand = "0.7.3"